# working-bevy

./:   .gitignore  Cargo.toml
assets/ldtk/: my_project.ldtk  working.ldtk
assets/maps/: simple_map.txt
src/: actions.rs  audio.rs  lib.rs  loading.rs  main.rs  menu.rs  player.rs  textures.rs  tilemap.rs
src/components/: camera.rs  collision.rs  dialog_box.rs  global.rs  input.rs  maps.rs  mod.rs  npc.rs  overworld.rs  player.rs  textures.rs
src/systems/: ascii.rs  camera.rs  collision.rs  debug.rs  fadeout.rs  graphics.rs  input.rs  mod.rs  npc.rs  player.rs  textures.rs  tilemap.rs
src/systems/game/: camera.rs  collision.rs  dialog_box.rs  game_menu.rs  graphics.rs  maps.rs  mod.rs  npc.rs  player.rs
src/systems/menus/: mod.rs  start_menu.rs
