[package]
name = "working"
version = "0.1.0"
publish = false
authors = ["Dan Henri <djosephhenri@gmail.com>"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]

bevy = "0.10"
bevy-inspector-egui = "0.18"
leafwing-input-manager = "0.9"
bevy_ecs_ldtk = "0.7.0"
bevy_rapier2d = "0.21.0"
bevy-ui-navigation = "0.24"
