[package]
name = "working"
version = "0.1.0"
publish = false
authors = ["Dan Henri <djosephhenri@gmail.com>"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.19"
leafwing-input-manager = "0.10"
bevy_ecs_ldtk = "0.8"
bevy_rapier2d = "0.22"
bevy-ui-navigation = "0.28"
