[package]
name = "working"
version = "0.1.0"
publish = false
authors = ["Dan Henri <djosephhenri@gmail.com>"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
bevy = { version = "0.15", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.29"
leafwing-input-manager = "0.16"
bevy_ecs_ldtk = "0.11"
bevy_rapier2d = "0.29"
